# bimpy

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  bimpy.cpp  bimpy.html  bimpy.multilingual.html  bimpy_docker.sh  build_manylinux_wheels.sh  genindex.html  imgui_glfw.cpp  imgui_glfw.h  impy.cpp  objects.inv  py-modindex.html  runtime_error.h  searchindex.js  setup.py
.github/workflows/: main.yml
_modules/: index.html
_modules/bimpy/: app.html  themes.html  utils.html
_modules/bimpy/multilingual/: load_fonts.html  unicode_ranges.html
_sources/: bimpy.multilingual.rst.txt  bimpy.rst.txt  modules.rst.txt
bimpy/: __init__.py  app.py  download.py  themes.py  utils.py
bimpy/multilingual/: load_fonts.py  unicode_ranges.py
config/: bimpy_imgui_config.h
doc_sources/: make.sh
doc_sources/source/: conf.py
docs/: .buildinfo  bimpy.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/bimpy/: themes.html
example/: basic.py  test.py
examples/: basic.py  basic_app.py  basic_image.py  basic_image_numpy.py  basic_window_hints.py  demo.py  demo_brief.py  draw_commands.py  image.py  multilingual.py  multiple.py  single_window.py  sliders.py  widgets.py
impy/: __init__.py  themes.py
scripts/: bimpy_docker.sh  build_manylinux_wheels.sh  make_win_wheels_32.bat  make_win_wheels_64.bat
source/: conf.py  index.rst
sources/: bimpy.cpp
